@@ -1,14 +1,6 @@
 package com.many.miniproject1.main;
 
-import com.many.miniproject1._core.errors.exception.Exception401;
 import com.many.miniproject1._core.errors.exception.Exception404;
-import com.many.miniproject1.apply.Apply;
-import com.many.miniproject1.apply.ApplyJPARepository;
-import com.many.miniproject1.apply.ApplyRequest;
-import com.many.miniproject1.apply.ApplyResponse;
-import com.many.miniproject1.offer.Offer;
-import com.many.miniproject1.offer.OfferJPARepository;
-import com.many.miniproject1.offer.OfferRequest;
 import com.many.miniproject1.post.Post;
 import com.many.miniproject1.post.PostJPARepository;
 import com.many.miniproject1.resume.Resume;
@@ -16,12 +8,10 @@ import com.many.miniproject1.resume.ResumeJPARepository;
 import com.many.miniproject1.scrap.Scrap;
 import com.many.miniproject1.scrap.ScrapJPARepository;
 import com.many.miniproject1.scrap.ScrapRequest;
-import com.many.miniproject1.scrap.ScrapResponse;
 import com.many.miniproject1.skill.Skill;
 import com.many.miniproject1.skill.SkillJPARepository;
 import com.many.miniproject1.user.User;
 import com.many.miniproject1.user.UserJPARepository;
-import com.many.miniproject1.user.UserService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -29,80 +19,71 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @RequiredArgsConstructor
 @Service
 public class MainService {
-    private final ApplyJPARepository applyJPARepository;
-    private final OfferJPARepository offerJPARepository;
     private final ScrapJPARepository scrapJPARepository;
     private final ResumeJPARepository resumeJPARepository;
     private final PostJPARepository postJPARepository;
     private final UserJPARepository userJPARepository;
     private final SkillJPARepository skillJPARepository;
-    private final UserService userService;
 
-    // 04-02 YSH
     public List<MainResponse.MainResumesDTO> mainResumes() {
         List<Resume> mainResumes = resumeJPARepository.mainAllResume();
 
-        return mainResumes.stream().map(resume -> new MainResponse.MainResumesDTO(resume)).toList();
+        return mainResumes.stream().map(MainResponse.MainResumesDTO::new).toList();
     }
 
-
-
-
-
-
-
-    public List<MainResponse.PostMatchingChoiceDTO> findByUserIdPost(int userId) {
+    public List<MainResponse.PostMatchingChoiceDTO> findByUserIdPost(Integer userId) {
         List<Post> postList = postJPARepository.findByUserIdJoinSkillAndUser(userId);
-        return postList.stream().map(post -> new MainResponse.PostMatchingChoiceDTO(post)).toList();
+
+        return postList.stream().map(MainResponse.PostMatchingChoiceDTO::new).toList();
     }
 
-    public List<MainResponse.ResumeMatchingChoiceDTO> findByUserIdResume(int userId) {
+    public List<MainResponse.ResumeMatchingChoiceDTO> findByUserIdResume(Integer userId) {
         List<Resume> resumeList = resumeJPARepository.findByUserIdJoinSkillAndUser(userId);
-        return resumeList.stream().map(resume -> new MainResponse.ResumeMatchingChoiceDTO(resume)).toList();
+
+        return resumeList.stream().map(MainResponse.ResumeMatchingChoiceDTO::new).toList();
     }
 
 
     public List<MainResponse.MainPostsDTO> getPostList() {
         List<Post> postList = postJPARepository.findAllPost();
-        return postList.stream().map(post -> new MainResponse.MainPostsDTO(post)).toList();
+
+        return postList.stream().map(MainResponse.MainPostsDTO::new).toList();
     }
 
 
-    public MainResponse.PostDetailDTO getPostIsCompanyDetail(int postId, int userId, Boolean isCompany) {
+    public MainResponse.PostDetailDTO getPostIsCompanyDetail(Integer postId, Integer userId, Boolean isCompany) {
         Post post = postJPARepository.findByPostIdJoinUserAndSkill(postId).orElseThrow(() -> new Exception404("공고를 찾을 수 없습니다."));
         List<Resume> resumes=resumeJPARepository.findAllResume(userId);
 
         return new MainResponse.PostDetailDTO(post, resumes, isCompany);
     }
 
-    public MainResponse.PostDetailDTO getPostDetail(int postId, Boolean isCompany) {
+    public MainResponse.PostDetailDTO getPostDetail(Integer postId, Boolean isCompany) {
         Post post = postJPARepository.findByPostIdJoinUserAndSkill(postId).orElseThrow(() -> new Exception404("공고를 찾을 수 없습니다."));
+
         return new MainResponse.PostDetailDTO(post, isCompany);
     }
 
-
-
     @Transactional
-    public Scrap companyScrap(int id, Integer userId) {
+    public Scrap companyScrap(Integer id, Integer userId) {
         Resume resume = resumeJPARepository.findById(id)
-                .orElseThrow(() -> new Exception401("존재하지 않는 이력서입니다...!" + id));
+                .orElseThrow(() -> new Exception404("해당하는 이력서가 없습니다."));
         User user = userJPARepository.findById(userId)
-                .orElseThrow(() -> new Exception401("띠용~?" + userId));
+                .orElseThrow(() -> new Exception404("해당하는 유저 정보가 없습니다."));
         ScrapRequest.ScrapResumeDTO mainScrapDTO = new ScrapRequest.ScrapResumeDTO(resume, user);
-        Scrap scrap = scrapJPARepository.save(mainScrapDTO.toEntity());
-        return scrap;
+
+        return scrapJPARepository.save(mainScrapDTO.toEntity());
     }
 
     public MainResponse.MainResumeMatchDTO matchingPost(Integer resumechoice) {
         //매칭할 공고 스킬 가져와 리스트에 담기
         List<Skill> resumeSkills = skillJPARepository.findSkillsByResumeId(resumechoice);
-        List<String> resumeSkill = resumeSkills.stream().map(skill -> skill.getSkill()).toList();
+        List<String> resumeSkill = resumeSkills.stream().map(Skill::getSkill).toList();
 
         //전체 이력서 새로운 이력서점수리스트에 담기, 점수는 0으로 시작
         List<MainResponse.PostSkillDTO> postSkillScore = new ArrayList<>();
@@ -142,21 +123,17 @@ public class MainService {
                 .toList();
         List<Post> matchingPostList = new ArrayList<>();
 
-
         for (int i = 0; i < filteredList.size(); i++) {
             int postId = filteredList.get(i).getPostId();
             matchingPostList.add(postJPARepository.findByPostIdJoinUserAndSkill(postId).orElseThrow(() -> new Exception404("공고를 찾을 수 없습니다.")));
-
         }
         //선택한 이력서 확인
-        Resume resume = resumeJPARepository.findById(resumechoice).orElseThrow(() -> new Exception401("권한이 없습니다"));
-        List<MainResponse.MainPostsDTO> mainPostsDTO=matchingPostList.stream().map(post -> new MainResponse.MainPostsDTO(post)).toList();
+        Resume resume = resumeJPARepository.findById(resumechoice).orElseThrow(() -> new Exception404("해당 이력서를 찾을 수 없습니다."));
+        List<MainResponse.MainPostsDTO> mainPostsDTO=matchingPostList.stream().map(MainResponse.MainPostsDTO::new).toList();
+
         return new MainResponse.MainResumeMatchDTO(resume, mainPostsDTO);
     }
 
-
-
-    // 나의 생각!! 서비스에서 두 개의 리스트를 만들었는데 이것을 하나의 서비스에 담아서 돌려주자.
     public List<MainResponse.PostTitleListDTO> getPostTitleListDTOs(Integer sessionUserId, Integer companyId) {
         List<Post> postList = postJPARepository.findPostListByCompanyId(sessionUserId, companyId);
         List<MainResponse.PostTitleListDTO> postTitleListDTOList = new ArrayList<>();
@@ -166,7 +143,7 @@ public class MainService {
                     .id(post.getId())
                     .title(post.getTitle())
                     .build());
-        }).collect(Collectors.toList());
+        }).toList();
 
         return postTitleListDTOList;
     }
@@ -212,8 +189,8 @@ public class MainService {
                     }
                 }
             }
-
         }
+        
         //2점이상 이력서아이디만 가져와 리스트 만들기
         List<MainResponse.ResumeSkillDTO> filteredList = resumeSkillScore.stream()
                 .filter(dto -> dto.getScore() >= 2)
@@ -227,8 +204,9 @@ public class MainService {
             matchingResumeList.add(resumeJPARepository.findByIdJoinSkillAndUser(resumeId).orElseThrow(() -> new Exception404("이력서를 찾을 수 없습니다.")));
         }
 
-        Post post = postJPARepository.findById(postchoice).orElseThrow(() -> new Exception404("권한이 없습니다"));
-        List<MainResponse.MainResumesDTO> resumesDTO = matchingResumeList.stream().map(resume -> new MainResponse.MainResumesDTO(resume)).toList();
+        Post post = postJPARepository.findById(postchoice).orElseThrow(() -> new Exception404("해당하는 공고가 없습니다."));
+        List<MainResponse.MainResumesDTO> resumesDTO = matchingResumeList.stream().map(MainResponse.MainResumesDTO::new).toList();
+
         return new MainResponse.MainPostMatchDTO(post, resumesDTO);
     }
 }
